Added emd citizen first implementation